--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,8 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link 
-      href="https://fonts.googleapis.com/family=Montserrat:wght@200;400;600;700&display=swap" 
-      rel="stylesheet"
-    >
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>Marvel App</title>
   </head>
   <body>
